--- a/Spotify-Clone/index.html
+++ b/Spotify-Clone/index.html
@@ -63,8 +63,8 @@
       </div>
 
     </div>
-    <div class="right border">
-      <div class="header">
+    <div class="right bg-grey rounded">
+      <div class="header rounded">
         <div class="nav">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
             fill="none">
@@ -73,21 +73,87 @@
           </svg>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000"
             fill="none">
-            <path d="M9.00005 6C9.00005 6 15 10.4189 15 12C15 13.5812 9 18 9 18" stroke="#ffffff"
-              stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M9.00005 6C9.00005 6 15 10.4189 15 12C15 13.5812 9 18 9 18" stroke="#ffffff" stroke-width="1.5"
+              stroke-linecap="round" stroke-linejoin="round" />
           </svg>
         </div>
         <div class="buttons">
-          <button>SingUP</button>
-          <button>Login</button>
+          <button class="singupbtn">Sing UP</button>
+          <button class="loginbtn">Log In</button>
         </div>
       </div>
-    </div>
-  </div>
+      <div class="spotifyPlaylists">
+        <h1>Spotify Playlist</h1>
+        <div class="cardContainer">
+          <div class="card">
+            <div class="play">
+              <div style="
+                        width: 48px;
+                        height: 48px;
+                        background-color: #1ed760;
+                        border-radius: 50%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                      ">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="23" height="23" fill="#000000">
+                  <path
+                    d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
+                </svg>
+              </div>
+            </div>
+            <img src="https://i.scdn.co/image/ab67616d00001e026fbb60d6a7e03ccb940a518e" alt="">
+            <h2>Sapphire</h2>
+            <p>Ed Sheeran </p>
+          </div>
+          <div class="card">
+            <div class="play">
+              <div style="
+                                  width: 48px;
+                                  height: 48px;
+                                  background-color: #1ed760;
+                                  border-radius: 50%;
+                                  display: flex;
+                                  align-items: center;
+                                  justify-content: center;
+                                ">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="23" height="23" fill="#000000">
+                  <path
+                    d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
+                </svg>
+              </div>
+            </div>
+            <img src="https://i.scdn.co/image/ab67616d00001e026fbb60d6a7e03ccb940a518e" alt="">
+            <h2>Sapphire</h2>
+            <p>Ed Sheeran </p>
+          </div>
+          <div class="card">
+            <div class="play">
+              <div style="
+                                  width: 48px;
+                                  height: 48px;
+                                  background-color: #1ed760;
+                                  border-radius: 50%;
+                                  display: flex;
+                                  align-items: center;
+                                  justify-content: center;
+                                ">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="23" height="23" fill="#000000">
+                  <path
+                    d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606" />
+                </svg>
+              </div>
+            </div>
+            <img src="https://i.scdn.co/image/ab67616d00001e026fbb60d6a7e03ccb940a518e" alt="">
+            <h2>Sapphire</h2>
+            <p>Ed Sheeran </p>
+          </div>
+        </div>
+      </div>
 
 
 
-  <script src="script.js"></script>
+      <script src="script.js"></script>
 </body>
 
 </html>
