--- a/Mordern-WebSite/index.html
+++ b/Mordern-WebSite/index.html
@@ -32,6 +32,43 @@
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, nisi <br>quae repellendus eaque distinctio, facilis in quas itaque eum,<br> ex voluptatibus? Molestias ex nobis veniam sunt a eos perspiciatis voluptas?</p>
     </div>
     </div>
+    <div id="featured">
+      <div class="fheading">
+        <h1>featured</h1>
+        <h1>project</h1>
+      </div>
+      <div id="fimages">
+        <div id="fleft">
+          <div class="fleftelm">
+            <h3>Riyadh</h3>
+            <h1>Official website of riyadh, saudi arabia's capital.</h1>
+            <h4>design, development,product</h4>
+          </div>
+          <div class="fleftelm">
+            <h3>Riyadh</h3>
+            <h1>Official website of riyadh, saudi arabia's capital.</h1>
+            <h4>design, development,product</h4>
+          </div><div class="fleftelm">
+            <h3>Riyadh</h3>
+            <h1>Official website of riyadh, saudi arabia's capital.</h1>
+            <h4>design, development,product</h4>
+          </div><div class="fleftelm">
+            <h3>Riyadh</h3>
+            <h1>Official website of riyadh, saudi arabia's capital.</h1>
+            <h4>design, development,product</h4>
+          </div>
+        </div>
+        <div id="fright">
+          <div class="images">
+
+          </div>
+        </div>
+        </div>
+        <div id="btndiv">
+          <button>View all products</button>
+        </div>
+    </div>
+
   </div>
 
 
