--- a/Mordern-WebSite/index.html
+++ b/Mordern-WebSite/index.html
@@ -64,11 +64,42 @@
           </div>
         </div>
         </div>
-        <div id="btndiv">
+        <div class="btndiv">
           <button>View all products</button>
         </div>
     </div>
 
+    <div id="dev">
+      <h1>Development and design resources</h1>
+      <p>We regularly release design courses, offer advice to newbie to newbie designers, walk you through creating awesome effects, and share source files.</p>
+    </div>
+
+    <div id="slides">
+      <div class="slide">
+        <div class="img">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSPueGZPEVYmN8AfvbicpHKpYbFMNbjbr7dZYsChocB_OO0f1bO2PMhWoValvFqB0v10kQ&usqp=CAU" alt="">
+        </div>
+        <div class="tag">Design Course</div>
+        <h3>How To Make Epic Website //Frontend development</h3>
+      </div>
+      <div class="slide">
+        <div class="img">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVJ0GrRdlLFv0IGj3kJDpFxFJ-Z94dzJHUCw&s" alt="">
+        </div>
+        <div class="tag">Design Course</div>
+        <h3>How To Make Epic Website //Frontend development</h3>
+      </div>
+      <div class="slide">
+        <div class="img">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRimVc3zyKiS8HKoUvuzEocjJrSYYFMCmPeuA&s" alt="">
+        </div>
+        <div class="tag">Design Course</div>
+        <h3>How To Make Epic Website //Frontend development</h3>
+      </div>
+    </div>
+    <div class="btndiv">
+      <button>View all products</button>
+    </div>
   </div>
 
 
