--- a/Mordern-WebSite/index.html
+++ b/Mordern-WebSite/index.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
   <link rel="stylesheet" href="https://www.unpkg.com/shery-js@1.0.0-alpha.0.5/dist/Shery.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <div id="main">
@@ -17,14 +18,9 @@
         <div id="right">
           <a href="">our showreel</a>
           <a href="">menu</a>
-          <div class="menu-btn" role="button" style="display: inline-block; cursor: pointer;">
-            <div class="magnet-bg"></div> <!-- This is the black background -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="35" height="35" fill="none">
-              <path d="M4 9L20 9" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-              <path d="M4 15L14 15" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-          </div>
-          
+          <div class="menu-btn magnet">
+            <div class="magnet-bg"></div>
+            <i class="fa-solid fa-bars"></i>    </div>
           
           </div>
       </div>
